--- a/css/small-business.css
+++ b/css/small-business.css
@@ -16,11 +16,11 @@ p{
 }
 
 .card-body{
-  background-color: gray;
+  background-color: #0c0808;
 }
 
 .card-footer{
-  background-color: gray;
+  background-color: #0c0808;
 }
 
 
